# feature_gate

./: README.md  docker-compose.yml  pyproject.toml  reload.py  repl.py
feature_gate/: client.py  feature.py
feature_gate/adapters/: memory.py  mongo.py  posthog.py
feature_gate/clients/: posthog.py  posthog_api_client.py
tests/: client_test.py
tests/feature_gate/: feature_test.py
tests/feature_gate/adapters/: memory_test.py  posthog_test.py
tests/feature_gate/clients/: posthog_api_client_test.py
tests/fixtures/: null_adapter.py
tests/fixtures/posthog_api/: add_feature_funnel.json  disable_feature_funnel.json  funnel_is_enabled.json
tests/fixtures/posthog_api_client/: enable_feature_funnel.json  funnel_is_disabled.json  get_features_when_funnel.json  mocks.py  rate_limiting_error.json  remove_feature_funnel.json
