
[tool.poetry]
name = "feature_gate"
version = "0.1.0"
description = "An extensible feature flagging library for Python"
authors = ["Patrick Wiseman <patrick@deft.services>"]
maintainers = ["Patrick Wiseman <patrick@deft.services>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deftinc/feature_gate"
repository = "https://github.com/deftinc/feature_gate"
keywords = ["feature flags", "feature gate"]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.1"
posthog = "^3.4.0"
ipython = "^8.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
